<resources>
    <string name="app_name">Speech Therapy</string>
    <string name="title_activity_maps">Maps</string>
    <string name="custom_listen_button">Listen the text</string>
    <string name="custom_listen_with_your_own_voice">Listen with your own face</string>
    <string name="custom_stop_listen">Stop</string>
    <string name="username">username</string>
    <string name="user_type">User Type:</string>
    <string name="teacher">Teacher</string>
    <string name="see_your_classes">See your classes</string>
    <string name="see_your_homeworks">See your Homeworks</string>
    <string name="see_your_evolution">See your Evolution</string>
    <string name="application_language">Application Language:</string>
    <string name="learn_english_or_improve_your_knowledge_with_pronunciation_and_grammar_exercises">Learn English or improve your knowledge with pronunciation and grammar exercises</string>
    <string name="use_your_account_to_assign_homeworks_to_a_class_of_students_and_follow_their_progress">Use your account to assign homeworks to a class of students and follow their progress</string>
    <string name="start">Start</string>
    <string name="student">Student</string>
    <string name="todo">TODO</string>
    <string name="try_some_challenging_words">Try some challenging words</string>
    <string name="type_what_you_hear">Type what you hear</string>
    <string name="learn_about_speaking_and_pronunciations_problems">Learn about speaking and pronunciations problems</string>
    <string name="contact_a_specialist">Contact a specialist</string>
    <string name="discover_pronunciation_mistakes">Discover pronunciation mistakes</string>
    <string name="words_master">Words Master</string>
    <string name="adult">Adult</string>
    <string name="exercise_your_pronunciations_skills">Exercise your pronunciations skills</string>
    <string name="begin"><![CDATA[Begin>]]></string>
    <string name="children_image">children image</string>
    <string name="write_what_you_hear">Write what you hear</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="adult_text">Adult TEXT</string>
    <string name="please_enter_your_text">Please enter your text...</string>
    <string name="clear">Clear</string>
    <string name="title_title_1_title_1_title_1_title_1">Title Title 1 Title 1 Title 1 Title 1</string>
    <string name="read_more">Read more</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="exercise_your_skills_with_a_varity_of_activities">Exercise your skills with a varity of activities</string>
    <string name="adult_menu">adult menu</string>
    <string name="answer">Answer</string>
    <string name="check">Check</string>
    <string name="please_press_the_button_to_start_recording">Please press the button to start recording</string>
    <string name="welcome">Welcome!</string>
    <string name="by_selecting_an_age_category_you_will_get_a_custom_experience">By selecting an age category you will get a custom experience!</string>
    <string name="start_with_this_common_words">Start with this common words</string>
    <string name="count_to_ten">Count to ten</string>
    <string name="animal_party">Animal Party!</string>
    <string name="can_you_write_these_words">Can you write these words?</string>
    <string name="reading_tiger">reading tiger</string>
    <string name="what_about_these_phrases">What about these phrases?</string>
    <string name="children">Children</string>
    <string name="challenging_exercises_and_games_for_pronunciation">Challenging exercises and games for pronunciation</string>
    <string name="hello_user">Hello, User</string>
    <string name="ready_to_have_fun">Ready to have fun?</string>
    <string name="_0">0</string>
    <string name="see_all_your_classes">See all your classes</string>
    <string name="see_your_students_evolutions">See your students evolutions</string>
    <string name="create_a_new_class">Create a new Class</string>
    <string name="add_class_name">Add class name</string>
    <string name="class_name">Class Name:</string>
    <string name="number_of_students">Number of Students: </string>
    <string name="no_class_yet">No class yet</string>
    <string name="add_new_student">Add new student</string>
    <string name="no_student_yet">No student yet</string>
    <string name="enter_student_email">Enter student email</string>
    <string name="or">OR</string>
    <string name="add">Add</string>
    <string name="use_qr">Use QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="StudentAlreadyInClass">Student already in class</string>
    <string name="InvalidStudentEmail">Invalid Student Email</string>
    <string name="scan_new_class_qr_code">Scan New Class QR Code</string>
    <string name="create_assignment_for_the_following_class">Create assignment for the following class</string>
    <string name="submission_date">Submission date</string>
    <string name="enter_date">Enter Date</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_date">SELECT DATE</string>
    <string name="enter_time">Enter Time</string>
    <string name="deadline">Deadline: </string>
    <string name="see_available_homeworks">See available homework</string>
    <string name="invalid_hour">Invalid Hour</string>
    <string name="vezi_toate_temele">See all homework</string>
    <string name="created_at">Created at: </string>
    <string name="assigned_to">Assigned To: </string>
    <string name="schimba_deadline_ul">Change deadline</string>
    <string name="search">Search</string>
    <string name="skip">skip</string>
    <string name="record_voice_for_clone">Record Voice For Clone</string>
    <string name="adult_grammar">Adult Grammar</string>
    <string name="adult_pronunciation">Adult Pronunciation</string>
    <string name="child_grammar">Child Grammar</string>
    <string name="child_pronunciation">Child Pronunciation</string>
    <string name="select_exercise_type">Select exercise type</string>
    <string name="pitch_comparison_red_native_blue_user">Pitch Comparison(Red - Native, Blue - User)</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="actual_answer">Actual Answer:</string>
    <string name="student_answer">Student Answer:</string>
    <string name="play_submitted_audio">Play Submitted Audio</string>
    <string name="evaluation_type">Evaluation Type:</string>
    <string name="prediction">Prediction</string>
    <string name="raspuns_corect">Correct Answer</string>
    <string name="vocale">Vocale</string>
    <string name="sunete_arpabet">Sunete ARPABet</string>
    <string-array name="languages_array">
            <item name="en">English(en)</item>
            <item name="ro">Romanian(ro)</item>
    </string-array>
    <string-array name="view_homeworks_array">
        <item name="clase">Classrooms</item>
        <item name="studenti">Students</item>
    </string-array>
    <string-array name="view_homeworks_types_array">
        <item name="clase">On Going</item>
        <item name="studenti">Delivered</item>
        <item name="studenti">Delivered late</item>
    </string-array>
</resources>