<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/create_assignment_for_the_following_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/classesSpinner"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/studentEmail"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:hint="@string/enter_student_email"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/errorText"
            android:layout_gravity="center"
            android:textColor="@color/brightRed"
            android:layout_width="wrap_content"
            android:text="@string/InvalidStudentEmail"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/errorTime"
        android:visibility="invisible"
        android:text="@string/invalid_hour"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textColor="@color/brightRed"
        android:layout_height="wrap_content"/>
    <Button
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:id="@+id/getHomeworks"
        android:text="@string/see_available_homeworks"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/homeworkSpinner"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>