<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/select_exercise_type"
        android:layout_height="wrap_content"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:textSize="10dp"
                android:layout_margin="10dp"
                android:layout_width="160dp"
                android:text="@string/adult_grammar"
                android:id="@+id/adultGrammar"
                android:textColor="@color/black"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="140dp"/>
            <Button
                android:textColor="@color/black"
                android:textSize="10dp"
                android:layout_margin="10dp"
                android:layout_width="160dp"
                android:text="@string/adult_pronunciation"
                android:id="@+id/adultPronunciation"
                android:backgroundTint="@color/lightGreen"
                android:layout_height="140dp"/>
        </TableRow>
        <TableRow>
        <Button
            android:textSize="10dp"
            android:layout_margin="10dp"
            android:layout_width="160dp"
            android:text="@string/child_grammar"
            android:id="@+id/childGrammar"
            android:textColor="@color/black"
            android:backgroundTint="@color/lightGreen"
            android:layout_height="150dp"/>
        <Button
            android:textSize="10dp"
            android:layout_margin="10dp"
            android:layout_width="160dp"
            android:textColor="@color/black"
            android:text="@string/child_pronunciation"
            android:id="@+id/childPronunciation"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="150dp"/>
        </TableRow>
        <Button
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/submitHomework"
            android:text="Submit"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            />
    </TableLayout>
</LinearLayout>