<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/create_assignment_for_the_following_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/homeworkTitle"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:hint="Enter homework title"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/classesSpinner"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/studentEmail"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:hint="@string/enter_student_email"
        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/errorText"
            android:layout_gravity="center"
            android:textColor="@color/brightRed"
            android:layout_width="wrap_content"
            android:text="@string/InvalidStudentEmail"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/deadline"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_margin="15dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputDate"
        android:autofillHints="" />
    <Button
        android:layout_margin="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:id="@+id/selectDate" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_margin="15dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputTime"
        android:autofillHints="" />

    <Button
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:id="@+id/selectTime" />
    </LinearLayout>
    <TextView
        android:id="@+id/errorTime"
        android:visibility="invisible"
        android:text="Invalid Hour"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textColor="@color/brightRed"
        android:layout_height="wrap_content"/>
</LinearLayout>