<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <EditText
        android:id="@+id/studentEmail"
        android:padding="10dp"
        android:layout_width="220dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="@string/enter_student_email"
        android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:text="@string/add"
                android:id="@+id/studentAdd"
                android:backgroundTint="@color/greenBlue"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/errorText"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:textColor="@color/brightRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:text = "@string/or"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAlignment="center"
        android:padding="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:id="@+id/generate"
        android:text="@string/use_qr"
        android:backgroundTint="@color/colorPrimary"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/qrCode"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/qr_code" />
</LinearLayout>