<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/replace_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="229dp"
            android:layout_height="186dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/info_kidarticle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/details_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_author"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:letterSpacing="0.05"
            android:text="@string/author"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_image"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/details_content"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:maxWidth="40dp"
            android:text="@string/content"
            android:lineSpacingExtra="14dp"
            android:letterSpacing="0.1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_author"
            tools:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:id="@+id/details_next"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_content"

            android:layout_margin="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/black"
            android:visibility="visible"
            tools:targetApi="lollipop" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/back"
            android:textColor="@color/black"
            android:visibility="visible"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>