<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorLight"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:textSize="18sp"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:id="@+id/userEmail"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TableLayout
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:textAlignment="center"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightGreen"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/user_type">
            </TextView>
            <TextView
                android:textAlignment="center"
                android:id="@+id/userType"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@color/colorLight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""
                />
        </TableRow>
        <TableRow
            android:textAlignment="center"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightGreen"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/application_language">
            </TextView>
            <TextView
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@color/colorLight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""
                android:id="@+id/language"
                />
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/seeClasses"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/see_all_your_classes"
                android:textColor="@color/black"
                >
            </com.google.android.material.button.MaterialButton>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/seeHomeworks"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/vezi_toate_temele"
                android:textColor="@color/black"
                >
            </com.google.android.material.button.MaterialButton>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/voiceClone"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/record_voice_for_clone"
                android:textColor="@color/black"
                >
            </com.google.android.material.button.MaterialButton>
        </TableRow>
    </TableLayout>
</LinearLayout>